tests/e2e/snapshots/e2e__cli_stream__stream_collection_get_json.snap
---
source: tests/e2e/cli_stream.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "VideoLibraryId": 10001,
  "Guid": "col-guid-0001",
  "Name": "Tutorials",
  "VideoCount": 5,
  "TotalSize": 524288000,
  "PreviewVideoIds": null,
  "PreviewImageUrls": []
}
