tests/e2e/snapshots/e2e__cli_stream__stream_library_get_table.snap
---
source: tests/e2e/cli_stream.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
+-------+--------------+--------+------------+-----------+--------------+-----------------+---------------------------+-----------+--------------+----------------------+
| ID    | Name         | Videos | Traffic    | Storage   | Pull Zone ID | Storage Zone ID | Resolutions               | Watermark | MP4 Fallback | Created              |
+-------+--------------+--------+------------+-----------+--------------+-----------------+---------------------------+-----------+--------------+----------------------+
| 10001 | main-library | 42     | 1073741824 | 536870912 | 5001         | 7001            | 240p,360p,480p,720p,1080p | false     | false        | 2024-01-01T00:00:00Z |
+-------+--------------+--------+------------+-----------+--------------+-----------------+---------------------------+-----------+--------------+----------------------+
