tests/e2e/snapshots/e2e__cli_stream__stream_video_resolutions_list_json.snap
---
source: tests/e2e/cli_stream.rs
expression: "String::from_utf8_lossy(&output.stdout)"
---
{
  "success": true,
  "message": "OK",
  "statusCode": 200,
  "data": {
    "videoId": "aaaabbbb-1111-2222-3333-ccccddddeeee",
    "videoLibraryId": 10001,
    "availableResolutions": [
      "1080p",
      "720p",
      "480p",
      "360p",
      "240p"
    ],
    "configuredResolutions": [
      "720p",
      "480p"
    ],
    "playlistResolutions": [],
    "storageResolutions": [
      {
        "resolution": "720p",
        "path": "/720p/playlist.m3u8"
      }
    ],
    "mp4Resolutions": [],
    "storageObjects": [],
    "oldResolutions": [],
    "hasBothOldAndNewResolutionFormat": false,
    "hasOriginal": true
  }
}
